slash/css/stylesheet.css
#canvas {
  width: 100%;
  height: 100%;
}

.score-board {
  border: 1px solid black;
  width: 150px;
  height: 100px;
  display: inline-block;
  margin-top: 120px;
}

.life-icons {
  width: 100%;
  height: 40px;
  display: block;
}

.life-icon {
  width: 40px;
  height: 40px;
  display: inline-block;
}

.score {
  font-size: 42px;
  margin: 0 auto;
  text-align: center;
}

.game-space {
  width: 100%;
  height: 300px;
  background-color: beige;
  border-top: 1px solid black;
  border-bottom: 1px solid black;
  margin-top: 10px;
}

.dots {
  height: 30px;
  width: 30px;
  background-size: cover;
}

.red-dots {
  background-image: url("../images/red-dot.png");
}

.blue-dots {
  background-image: url("../images/blue-dot.png");
}

.green-dots {
  background-image: url("../images/green-dot.png");
}

.yellow-dots {
  background-image: url("../images/yellow-dot.png");
}

.flying-object {
  height: 30px;
  width: 30px;
  background-image: url("../images/walking-cat.gif");
  background-size: cover;
}

.striked {
  display: none;
}

